# wordlabs

./: README.md  docker-compose.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
app/: .gitignore  Dockerfile  README.md  pubspec.yaml
app/android/app/: build.gradle  google-services.json
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: constants.dart  homepage.dart  main.dart  old.dart
app/lib/controllers/: auth_controller.dart  profile_controller.dart
app/lib/pages/: home.dart  inbox.dart  plus.dart  profile.dart  saved.dart  search.dart
app/lib/posts/: mypost.dart  post_template.dart
app/lib/util/: button.dart  post_template.dart
app/lib/views/screens/: homepage.dart
app/lib/views/widgets/: post_widget.dart  text_input_field.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/web/: manifest.json
assets/: test.html
content/: pyproject.toml
content-scraping/: .gitignore  README.md  download_articles.sh  feed_urls.yaml  feeds.yaml  pyproject.toml
content-scraping/src/content/: parse_feed.py
content-scraping/src/webserver/: webserver.py
content/tests/: test_content.py
db/data/scripts/: load-test-data.js
db/scripts/: run_db_docker.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
