[tool.poetry]
name = "content"
version = "0.1.0"
description = ""
authors = ["Evan Azevedo <evan@azevedo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
